--- a/config-combined.yaml
+++ b/config-combined.yaml
@@ -6,13 +6,14 @@ metadata:
   name: marker-configmap
 data:
   marker-configmap: |
-    PhantomData: "v2 of marker"
+    PhantomData: "v3 of marker"
 ---
 # Source: oshift-config/templates/image-fetch-config.yaml
 apiVersion: config.openshift.io/v1
 kind: Image
 metadata:
   name: cluster
+  namespace: ""
   annotations:
     include.release.openshift.io/ibm-cloud-managed: "true"
     include.release.openshift.io/self-managed-high-availability: "true"
