--- a/oshift-config/templates/image-fetch-config.yaml
+++ b/oshift-config/templates/image-fetch-config.yaml
@@ -6,10 +6,12 @@ metadata:
     include.release.openshift.io/ibm-cloud-managed: "true"
     include.release.openshift.io/self-managed-high-availability: "true"
     include.release.openshift.io/single-node-developer: "true"
-    release.openshift.io/create-only: "true"
+    # release.openshift.io/create-only: "true"
 spec:
   registrySources:
     blockedRegistries:
       - "docker.io"
+      - "wally.io"
+      - "wonky.io"
   additionalTrustedCA:
     name: registry-certs
