--- a/config-combined.yaml
+++ b/config-combined.yaml
@@ -13,6 +13,7 @@ apiVersion: config.openshift.io/v1
 kind: Image
 metadata:
   name: cluster
+  namespace: ""
   annotations:
     include.release.openshift.io/ibm-cloud-managed: "true"
     include.release.openshift.io/self-managed-high-availability: "true"
@@ -23,6 +24,5 @@ spec:
     blockedRegistries:
       - "docker.io"
       - "wally.io"
-      - "wonky.io"
   additionalTrustedCA:
     name: registry-certs
