Repurposed it all to be a general test

--- a/test-setup/manifests/native-namespaced-configmap.yaml
+++ b/test-setup/manifests/native-namespaced-configmap.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: marker-configmap
+  name: test-configmap
 data:
   marker-configmap: |
-    PhantomData: "v6 of marker"
+    PhantomData: "v0 of test configmap"
